<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="model" type="com.paulds.simpleftp.presentation.model.EditServerViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="presentation.activities.ListFileActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AddServer_etName"
                    android:hint="@string/activity_edit_server_name"
                    app:binding="@{model.name}" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/AddServer_etHost"
                        android:hint="@string/activity_edit_server_hostname"
                        app:binding="@{model.host}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/AddServer_etPort"
                        android:hint="@string/activity_edit_server_port"
                        android:layout_gravity="center_horizontal"
                        app:binding="@{model.port}" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_edit_server_is_anonymous"
                android:id="@+id/AddServer_swAnonymous"
                android:layout_gravity="center_horizontal"
                app:binding="@{model.isAnonymous}"
                android:paddingTop="15dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AddServer_etLogin"
                    android:hint="@string/activity_edit_server_login"
                    app:binding="@{model.login}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/AddServer_etPassword"
                    android:hint="@string/activity_edit_server_password"
                    app:binding="@{model.password}" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_arrow_back_24dp"
                    android:id="@+id/AddServer_ibBack"
                    android:adjustViewBounds="false"
                    android:onClick="@{model.back}"
                    android:clickable="true"
                    android:paddingRight="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.titleResource}"
                    android:layout_gravity="start"
                    android:id="@+id/AddServer_teTitle"
                    android:textColor="@color/action_bar_text"
                    android:textSize="@dimen/abc_text_size_title_material"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_check_24dp"
                    android:id="@+id/AddServer_ibCreate"
                    android:adjustViewBounds="false"
                    android:onClick="@{model.createServer}"
                    android:padding="15dp"
                    android:clickable="true" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>